[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/server.rs"

[dependencies]
tonic = "0.8.0"
prost = "0.11.0"
tokio = {version = "1.21.0", features = ["rt-multi-thread"]}
log = "0.4.17"
env_logger = "0.9.0"
tonic-web = "0.4.0"
clap = {version = "3.2.20", features = ["derive"]}
config = {version = "0.13.2", features = ["yaml"]}
serde = "1.0.144"
tonic-reflection = "0.5.0"

[build-dependencies]
tonic-build = "0.8.0"
